Fix logo vertical alignment

--- a/resources/sass/v2/molecules/_navbar.scss
+++ b/resources/sass/v2/molecules/_navbar.scss
@@ -109,6 +109,12 @@ $nav-secondary-color: $color-primary;
     }
 }
 
+.logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 @media screen and (max-width: 1200px) {
     .navbar .container > ul a {
         padding: 1em 1em;
